--- a/CAPI/package.json
+++ b/CAPI/package.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
     "cors": "^2.8.5"
   }
 }
