--- a/CAPI/package.json
+++ b/CAPI/package.json
@@ -1,9 +1,21 @@
 {
-  "type": "module",
+  "name": "capi-pageview",
+  "version": "1.0.0",
+  "description": "Server untuk mengirim PageView ke Meta CAPI",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "express": "^4.21.2",
-    "node-fetch": "^3.3.2",
-    "cors": "^2.8.5"
+    "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "request-ip": "^3.3.0",
+    "uuid": "^9.0.0"
   }
 }
