--- a/CAPI/package.json
+++ b/CAPI/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "capi-pageview",
+  "name": "pageview",
   "version": "1.0.0",
-  "description": "Server untuk mengirim PageView ke Meta CAPI",
+  "description": "PageView CAPI Server",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "axios-retry": "^3.6.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "helmet": "^7.0.0",
     "request-ip": "^3.3.0",
     "uuid": "^9.0.0"
-    "axios-retry": "^3.6.0"
   }
 }
